# cognitive-memory

./: .claudignore  .env.example  .env.template  .gitignore  .mcp-alt.json  .mcp.json  .mcp.json.template  .pre-commit-config.yaml  .secrets.baseline  BUG-FIX-REPORT-2025-11-30.md  BUG-REPORT-2025-12-06.md  BUG-REPORT-2025-12-07.md  BUG-REPORT-FOLLOWUP-2025-11-30.md  BUGFIX_INSTRUCTIONS_story_1-8.md  CHANGELOG.md  LICENSE  Makefile  README.md  TECH-DEBT-SSL-CONNECTION.md  add_get_method.py  config.yaml  config.yaml.backup.20251118  debug_mcp.py  debug_original_mcp.py  debug_server_run.py  docker-compose.test.yml  files_to_convert.txt  generate_embedding.py  populate_test_data.py  prd.md  project-context.md  pyproject.toml  requirements.txt  simple_validation.py  start-mcp-server.sh  start_mcp_server.sh  static_validation.py  test_haiku_setup.py  test_manual.py  test_mcp_server.py  (+5 more)
.github/: dependabot.yml
bmad-docs/: ADR-001-test-layer-architecture.md  PRD.md  README.md  architecture.md  atdd-checklist-epic-5.md  audit-2026-02-12.md  audit-summary-2026-02-14.md  audit-test-coverage-2026-02-12.md  calibration-results.md  data-retention-policy-2026-02-14.md  ecosystem-architecture.md  epic-5-tech-context.md  epic-prep-library-api.md  epics.md  evaluation-results.md  evaluation-results.mock.md  hybrid-search-fix-plan.md  index.md  party-mode-session-2026-02-12.md  phase-2-smf-test-repair-final-report.md  production-deployment-story-2.9.md  requirements-cognitive-memory-graphrag.md  research-graphrag-2025-11-26.md  sprint-status.yaml  story-3.1-golden-test-set.md  tech-spec-epic-1.md  tech-spec-epic-2.md  tech-spec-epic-3.md  test-design-epic-5.md  test-repair-plan-2026-02-12.md  velocity-management-2026-02-13.md
bugs/: BUG-ASYNC-AWAIT-INVESTIGATION.md  BUG-MCP-ASYNC-AWAIT-DETAILED.md  dissonance-check-type-mismatch.md
cognitive_memory/: __init__.py  connection.py  exceptions.py  store.py  types.py
config/: .env.template  config.yaml  decay_config.yaml
docs/: 7-day-stability-test-guide.md  GOLDEN_TEST_SET.md  HOW-TO-ACTIVATE-IO.md  POSTGRESQL_SETUP.md  README.md  api-reference.md  backup-recovery.md  budget-monitoring-testing.md  budget-monitoring.md  cot-evaluation.md  cot-generation-guide.md  installation-guide.md  integration-test-guide-for-dev-agents.md  integration-tests-analysis.md  io-system-integration-prd.md  mcp-configuration.md  mcp-recommendations.md  migration-guide.md  migration_decisions.md  operations-manual.md  production-checklist.md  query-expansion-evaluation.md  query-expansion-guide.md  query-expansion-testing-guide.md  staged-dual-judge.md  systemd-deployment.md  tag-taxonomy.md  troubleshooting.md
examples/: library_usage.py
knowledge/: DECISION-namespace-isolation-strategy.md  alembic-rls-management.md  connection-pool-rls-integration.md  fastmcp-3x-migration-guide.md  implementation-technical-details.md  mcp-context-propagation-patterns.md  mcp-middleware-comparison.md  mcp-multi-tenant-architecture.md  mcp-transport-migration-strategies.md  multi-tenancy-patterns.md  multi-tenant-isolation-testing.md  pgtap-availability-and-rls-testing.md  rls-gradual-rollout-strategies.md  rls-pgvector-performance-optimization.md  rls-policies-core-tables.md  zero-downtime-migrations.md
mcp_server/: __main__.py  config.py  exceptions.py
scripts/: activate_enforcing.py  apply_migration_011.py  apply_migration_023.py  apply_migration_023b.py  apply_migration_024.py  apply_migration_024b.py  apply_migration_025.py  backfill_project_id.py  backup_batch_nodes_20260216_234517.json  backup_postgres.sh  run_migrations.sh  (+34 more)
(+638 files in other folders)
