[tool.poetry]
name = "cognitive-memory-system"
version = "1.0.0"
description = "Cognitive Memory System v1.0.0 - MCP Server with PostgreSQL + pgvector"
authors = ["ethr <ethr@example.com>"]
readme = "README.md"
packages = [
    {include = "mcp_server"},
    {include = "cognitive_memory"},
]

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^1.23.0"  # CVE fix: DNS rebinding protection
urllib3 = "^2.6.0"  # CVE fix: compressed data handling
psycopg2-binary = "^2.9.0"
pgvector = "^0.2.0"
openai = "^1.0.0"
anthropic = "^0.25.0"
numpy = "^1.24.0"
streamlit = "^1.28.0"
scipy = "^1.11.0"
scikit-learn = "^1.3.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
ruamel-yaml = "^0.18.0"
tabulate = "^0.9.0"
cryptography = "^46.0.3"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
types-psycopg2 = "^2.9.21.20251012"
types-jsonschema = "^4.25.1.20251009"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
# Less strict settings for now
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false

# Ignore module conflicts for streamlit apps
[[tool.mypy.overrides]]
module = [
    "streamlit_apps.*",
    "streamlit_apps.utils.*",
    "streamlit_apps.components.*"
]
ignore_errors = true

# Ignore validation scripts (temporary)
[[tool.mypy.overrides]]
module = [
    "test_validation.*",
    "simple_validation.*",
    "static_validation.*",
    "validate_commit_fix.*",
    "test_streamlit_app.*"
]
ignore_errors = true

# Ignore MCP server components (temporary)
[[tool.mypy.overrides]]
module = [
    "mcp_server.tools.*",
    "mcp_server.validation.*",
    "mcp_server.resources.*"
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: marks tests as async",
    "integration: marks tests as integration tests requiring real database",
    "P0: Critical path - must pass for merge",
    "P1: High priority - feature validation",
    "P2: Medium priority - edge cases",
    "P3: Low priority - nice to have",
]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "scripts/migration"]
skips = ["B101", "B311"]  # B101: assert, B311: random (not crypto)
targets = ["mcp_server", "cognitive_memory"]
